# Lev_PictureManager

./: .gitignore
Lev_PictureAnalyser/Lev_Demo/: Lev_Demo.cpp
Lev_PictureAnalyser/Lev_PictureAnalyser/: CMakeLists.txt  Lev_PictureAnalyser.cpp  Lev_PictureAnalyser.h
Lev_PictureManager/: CMakeLists.txt
Lev_PictureManager/Lev_Demo/: CMakeLists.txt  Lev_Demo.cpp
Lev_PictureManager/Lev_PictureManager/: CMakeLists.txt  Lev_PictureManager.cpp  Lev_PictureManager.h
